--- a/HW/hw11/book-service/src/main/resources/application.yml
+++ b/HW/hw11/book-service/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 server:
   port: 8220
   error:
-    include-message: always # Выводить сообщение в отловленной ошибке
-
+    include-message: always
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/library
@@ -13,7 +12,6 @@ spring:
       ddl-auto: create-drop
   application:
     name: book-service
-
 eureka:
   client:
     serviceUrl:
@@ -21,7 +19,6 @@ eureka:
   instance:
     prefer-ip-address: true
     status-page-url-path: ${spring.cloud.client.hostname}
-
 logging:
   time:
     log-level: warn
